<?xml version="1.0" encoding="utf-8"?><!--
  Copyright 2014 Google, Inc

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>
    <string name="action_settings">Settings</string>
    <string name="address_found">Address Found!</string>
    <string name="address_label">Address: </string>
    <string name="all_locations_label">All Locations</string>
    <string name="app_name">Data Atlas</string>
    <string name="recorded_time_label">Recorded: </string>
    <string name="coordinates_latitude_label">Latitude: </string>
    <string name="coordinates_longitude_label">Longitude: </string>
    <string name="duration_label">Duration: </string>
    <string name="edit_rows">Edit Rows</string>
    <string name="invalid_lat_long_used">Invalid Location Used</string>
    <string name="last_location_label">Most Recent Location</string>
    <string name="last_updated_label">Last updated at</string>
    <string name="location_updated_message">Location updated</string>
    <string name="location_label">Coordinates </string>
    <string name="menu_dialog_modify">Set Time Frame</string>
    <string name="no_address_found">No Address Found</string>
    <string name="no_geocoder_available">No geocoder available</string>
    <string name="no_location_data_provided">No Location Data Provided</string>
    <string name="refresh_location">Refresh Location</string>
    <string name="service_not_available">Service Not Available</string>
    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>
    <string name="all_locations_subtitle_text">Click on a date to views location data</string>
    <string name="title_activity_maps">Map</string>
    <string name="refresh_rows">Refresh Rows</string>
    <string name="icon_tray_save_view_desc">Saves the current view as a screenshot</string>
    <string name="icon_tray_raw_data_desc">Switches to viewing the raw data</string>
    <string name="icon_tray_modify_params_desc">Modify the parameters for the visualization</string>
    <string name="tag_fragment_bar_chart_visualization">fragment_bar_chart_visualization</string>
    <string name="tag_fragment_tile_visualization">fragment_tile_visualization</string>
    <string name="tag_fragment_voronoi_visualization">fragment_voronoi_visualization</string>
    <string name="title_activity_raw_data">Raw Data</string>

    <string name="hello_world">Hello world!</string>
    <string name="dialog_daterange_custom_range_label">Time Frame</string>
    <string name="dialog_daterange_to_label">To</string>
    <string name="dialog_daterange_from_label">From</string>
    <string name="dialog_daterange_make_change">Update</string>
    <string name="dialog_daterange_interval_text_label">Interval</string>
    <string name="dialog_daterange_standard_range_label">Standard Timeframe</string>
    <string name="dialog_daterange_switch_label">Use Current Time</string>
    <string name="dialog_daterange_update_text_label">Auto-Update</string>
    <string name="dialog_daterange_radiobutton_week">Week</string>
    <string name="dialog_daterange_radiobutton_month">Month</string>
    <string name="dialog_daterange_radiobutton_day">Day</string>
    <string name="dialog_daterange_radiobutton_custom">Custom</string>
    <string name="view_raw_data">View Raw Data</string>
    <string name="drawer_icon_description">Arrow indicating the direction of motion when clicked.</string>
    <string name="tag_fragment_network_visualization">network_visualization</string>
</resources>
