<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2014 Google, Inc.

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_padding">

        <android.support.v7.widget.CardView
            android:id="@+id/most_recent_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="2dp"
            android:layout_marginBottom="@dimen/card_gutter">

        <FrameLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:paddingTop="24sp"
            android:paddingLeft="16sp"
            android:paddingRight="16sp"
            android:paddingBottom="16sp">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/last_location_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_location_label"
                    android:textSize="@dimen/title_text_size"/>

                <TextView
                    android:id="@+id/last_updated_label"
                    android:layout_below="@+id/last_location_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_updated_label"
                    android:textSize="14sp"
                    android:paddingBottom="16sp"
                    android:textColor="#ff808080" />

                <TextView
                    android:id="@+id/coordinates_latitude_label"
                    android:layout_below="@+id/last_updated_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coordinates_latitude_label"
                    android:textSize="@dimen/default_text_size"
                    android:paddingEnd="4sp"
                    android:textColor="#ff585858" />

                <TextView
                    android:id="@+id/coordinates_longitude_label"
                    android:layout_below="@+id/coordinates_latitude_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/coordinates_longitude_label"
                    android:textSize="@dimen/default_text_size"
                    android:paddingEnd="4sp"
                    android:textColor="#ff585858" />


                <TextView
                    android:id="@+id/last_arrival_time_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/coordinates_longitude_label"
                    android:text="@string/recorded_time_label"
                    android:textSize="@dimen/default_text_size"
                    android:paddingEnd="4sp"
                    android:textColor="#ff585858" />

                <TextView
                    android:id="@+id/duration_label"
                    android:layout_below="@+id/last_arrival_time_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/duration_label"
                    android:textSize="@dimen/default_text_size"
                    android:paddingEnd="4sp"
                    android:textColor="#ff585858" />

                <TextView
                    android:id="@+id/coordinates_latitude_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/coordinates_latitude_label"
                    android:layout_toEndOf="@+id/coordinates_latitude_label"
                    android:textSize="@dimen/default_text_size"
                    android:textColor="#ff808080"/>

                <TextView
                    android:id="@+id/coordinates_longitude_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/coordinates_longitude_label"
                    android:layout_toEndOf="@+id/coordinates_longitude_label"
                    android:textSize="@dimen/default_text_size"
                    android:textColor="#ff808080"/>

                <TextView
                    android:id="@+id/last_arrival_time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/last_arrival_time_label"
                    android:layout_toEndOf="@+id/last_arrival_time_label"
                    android:textSize="@dimen/default_text_size"
                    android:textColor="#ff808080"/>

                <Chronometer
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/duration_counter"
                    android:layout_alignTop="@+id/duration_label"
                    android:layout_toEndOf="@+id/duration_label"
                    android:textSize="@dimen/default_text_size"
                    android:textColor="#ff808080"/>

            </RelativeLayout>
            </FrameLayout>

        </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/all_locations_card_view"
                android:layout_below="@+id/most_recent_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="2dp">

            <FrameLayout
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:paddingTop="24sp"
                android:paddingLeft="16sp"
                android:paddingRight="16sp"
                android:paddingBottom="16sp">

            <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/all_locations_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all_locations_label"
                        android:textSize="@dimen/title_text_size" />

                    <TextView
                        android:id="@+id/all_locations_subtitle_label"
                        android:layout_below="@+id/all_locations_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/all_locations_subtitle_text"
                        android:textSize="14sp"
                        android:textColor="#ff808080" />

                    <!-- TODO(clidwin): Change to ListView -->
                    <LinearLayout
                        android:id="@+id/all_locations_linear_layout"
                        android:layout_below="@+id/all_locations_subtitle_label"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                    </LinearLayout>

                </RelativeLayout>
            </FrameLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</ScrollView>
