<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v4.view.ViewPager
            android:id="@+id/pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/tabs"
            android:background="@color/Accent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>

            <ImageButton
                android:id="@id/icon_tray_raw_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@null"
                android:contentDescription="@string/icon_tray_raw_data_desc"
                android:gravity="center_horizontal|center_vertical"
                android:src="@drawable/ic_code_white" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>

            <ImageButton
                android:id="@id/icon_tray_save_view"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:adjustViewBounds="true"
                android:background="@null"
                android:contentDescription="@string/icon_tray_save_view_desc"
                android:gravity="center_horizontal|center_vertical"
                android:src="@drawable/ic_photo_camera_white_36dp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>

            <ImageButton
                android:id="@id/icon_tray_view_parameters"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:adjustViewBounds="true"
                android:background="@null"
                android:contentDescription="@string/icon_tray_modify_params_desc"
                android:gravity="center_horizontal|center_vertical"
                android:src="@drawable/ic_tune_white_36dp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

    <!--<LinearLayout
        android:id="@+id/ly_bar_bottom"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:orientation="horizontal">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/button_addc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="28dp"

            android:src="@drawable/ic_action_refresh" />
    </LinearLayout>!-->
</RelativeLayout>